# RAG-QA-agent

./: .env.example  README.md  app.py  hello_advanced_rag.py  hello_agent.py  hello_document.py  hello_eval.py  hello_llm.py  hello_rag.py  hello_rag_chain.py  hello_retrieval.py  pyproject.toml
chroma_db/: chroma.sqlite3
data/sample_docs/: IT安全规范.txt  员工手册_考勤制度.md  差旅报销政策.md
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  graph.py
src/api/: __init__.py  routes.py  schemas.py
src/document/: loader.py  pipeline.py  splitter.py
src/eval/: evaluator.py  ragas_compat.py  test_data.py
src/rag/: advanced.py  chain.py  prompts.py
src/retrieval/: __init__.py  embeddings.py  vector_store.py
