[project]
name = "rag-agent"
version = "0.1.0"
description = "企业级RAG智能检索智能体"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # ---- 阶段一：核心依赖 ----
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.4.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "dashscope>=1.20.0",
    # ---- 后面阶段会用到的（先装上，免得后面再装）----
    "chromadb>=0.5.0",
    "langchain-chroma>=1.0.0",
    "pypdf>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.40.0",
    "langgraph>=1.0.0",
    "ragas>=0.4.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]